--- a/red/templates/base.html
+++ b/red/templates/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>{% block title %}Liber{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Este es un proyecto creado con Cookie Cutter">
+    <meta name="description" content="Proyecto creado con Cookie Cutter, descripcion completa en desarrollo.">
     <meta name="author" content="Ever Ruiz Diaz">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
