--- a/core/templates/core/includes/footer.html
+++ b/core/templates/core/includes/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
-            <p class="copyright text-muted mt-5">Copyright &copy; 2020 · Ever (Desarrollador de Software) </p>
+            <p class="copyright text-muted mt-5">Copyright &copy; 2020 | Ever, desarrollador de software. </p>
             </div>
         </div>
     </div>
