Update footer and navigation

--- a/core/templates/core/includes/footer.html
+++ b/core/templates/core/includes/footer.html
@@ -1,9 +1,8 @@
-  
 <footer class="bg-dark">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
-            <p class="copyright text-muted mt-5">Copyright &copy; 2020 | Ever, desarrollador de software. </p>
+            <p class="copyright text-muted mt-5">Copyright &copy; 2020 | Ever, Software Developer</p>
             </div>
         </div>
     </div>
