Add new app Pages and many changes

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container">
     <div style="padding-top:50px; text-align:center;">
-    <h1>Liber, welcome!</h1>
+    <h1>{{title}}</h1>
         <div class="row mt-5">
             <div class="col-3"></div>
             <div>
