--- a/core/templates/core/includes/navigation.html
+++ b/core/templates/core/includes/navigation.html
@@ -10,7 +10,7 @@
                 <a class="nav-link" href="{% url 'home' %}">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'sample' %}">Sample</a>
+                <a class="nav-link" href="{% url 'pages' %}">Páginas</a>
             </li>
         </ul>
         <ul class="navbar-nav">
