--- a/core/templates/core/sample.html
+++ b/core/templates/core/sample.html
@@ -1,20 +1,21 @@
 {% extends "core/base.html" %}
 {% load static %}
-{% block title %} Sample {% endblock %}
+{% block title %}Página{% endblock %}
 {% block content %}
-
-<div class="container mt-2">
-    <div class="row justify-content-md-center">
+<main role="main">
+  <div class="container mt-2">
+      <div class="row justify-content-md-center">
         <div class="col-md-3">
-            <img src="{% static 'core/img/placeholder.png' %}" class="img-fluid"/>
+          <img src="{% static 'core/img/placeholder.png' %}" class="img-fluid"/>
         </div>
         <div class="col-md-6 mt-3">
-            <h3>Página de prueba</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce hendrerit nibh vel faucibus auctor. 
-                Phasellus non arcu dictum, porttitor orci sed, maximus ligula. Duis mollis pulvinar tempor. 
-                Cras ex nisl, fringilla ut rhoncus a, vestibulum ac turpis.</p>
+          <h3>Página de prueba</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce hendrerit nibh vel faucibus auctor. 
+            Phasellus non arcu dictum, porttitor orci sed, maximus ligula. Duis mollis pulvinar tempor. 
+            Cras ex nisl, fringilla ut rhoncus a, vestibulum ac turpis.</p>
         </div>
-    </div>
-</div>
+      </div>
+  </div>
+</main>
 
 {% endblock content %}
