--- a/core/templates/core/includes/navigation.html
+++ b/core/templates/core/includes/navigation.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5 pt-4 pb-4">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-4 pb-4">
     <div class="container">
         <a class="navbar-brand" href="{% url 'home' %}">Liber</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ned" aria-controls="ned" aria-expanded="false">
@@ -10,7 +10,7 @@
                 <a class="nav-link" href="{% url 'home' %}">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'pages' %}">Páginas</a>
+                <a class="nav-link" href="{% url 'pages' %}">Paginas</a>
             </li>
         </ul>
         <ul class="navbar-nav">
