--- a/pages/templates/pages/page_detail.html
+++ b/pages/templates/pages/page_detail.html
@@ -12,6 +12,7 @@
                         <p>{{object.content|safe}}</p>
                         {% if request.user.is_staff %}
                             <p><a href="#">Editar</a></p>
+                            <p><a href="#">Eliminar</a></p>
                         {% endif %}
                     </div>
                 </div>
