--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -5,13 +5,13 @@
     {% include 'pages/includes/page_menu.html' %}
     <main role="main">
         <div class="container mb-4">
-            {% for page in page_list %}
+            {% for page in page_list|dictsort:'id' reversed %}
                 <div class="row mt-3">
                     <div class="col-md-9 mx-auto">
                         <h2 class="mb-4">{{page.title}}</h2>
                         <div>
                         <p>{{page.content|striptags|safe|truncatechars:"200"}}</p>
-                            <p><a href="{% url 'page' page.id page.title|slugify %}">Leer más</a></p>
+                            <p><a href="{% url 'pages:page' page.id page.title|slugify %}">Leer más</a></p>
                         </div>
                     </div>
                 </div>
