--- a/pages/templates/pages/includes/page_menu.html
+++ b/pages/templates/pages/includes/page_menu.html
@@ -1,24 +1,24 @@
+{% load static %}
+<script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
+<script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
 {% if request.user.is_staff %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
 
         <span class="navbar-brand" href="">Administrar</span>
 
-        <button class="navbar-toggler" type="button" data-target="#nep" aria-controls="nep" aria-expanded="false">
-            <span class="navbar-toggler-icon">
-
-            </span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nep" aria-controls="nep" aria-expanded="false">
+            <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="nep">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'pages:create' %}"><i>Crear pagina</i></a>
+                    <a class="nav-link" href="{% url 'pages:create' %}">Crear pagina</a>
                 </li>
 
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'pages:pages' %}">Listar pagina</a>
-                    {% comment %} <a class="nav-link" href="{% url 'pages:delete' %}">Listar pagina</a> {% endcomment %}
                 </li>
             </ul>
         </div>
