--- a/pages/templates/pages/page_confirm_delete.html
+++ b/pages/templates/pages/page_confirm_delete.html
@@ -3,8 +3,17 @@
 {% block title %}Crear pagina{% endblock %}
 
 {% block content %}
-    <form method="post">{% csrf_token %}
-        <p>Are you sure you want to delete "{{ object }}"?</p>
-        <input type="submit" value="Confirm">
-    </form>
+    {% include 'pages/includes/page_menu.html' %}
+    <main role="main">
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-md-9 mx-auto">
+                    <form method="post">{% csrf_token %}
+                        <p class="text-center">Esta seguro de que quiere eliminar <b>"{{ object }}"</b>?</p>
+                        <input type="submit" class="btn btn-primary btn-block" value="Si, borrar la pagina.">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </main>
 {% endblock %}
