--- a/pages/templates/pages/page_detail.html
+++ b/pages/templates/pages/page_detail.html
@@ -7,13 +7,24 @@
         <div class="container">
             <div class="row mt-3">
                 <div class="col-md-9 mx-auto">
+                    {% if 'ok' in request.GET %}
+                        <div class="alert alert-success alert-dismissible fade show" role="alert">
+                            <strong>{{object}}</strong> editado con éxito.
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    {% endif %}
                     <h2 class="section-heading mb-4">{{page.title}}</h2>
                     <div>
                         <p>{{object.content|safe}}</p>
+
                         {% if request.user.is_staff %}
-                            <p><a href="#">Editar</a></p>
-                            <p><a href="#">Eliminar</a></p>
+                            <p>
+                                <a href="{% url 'pages:update' page.id %}">Editar</a> | <a href="{% url 'pages:delete' page.id %}">Eliminar</a>
+                            </p>
                         {% endif %}
+
                     </div>
                 </div>
             </div>
