--- a/pages/templates/pages/page_form.html
+++ b/pages/templates/pages/page_form.html
@@ -3,20 +3,21 @@
 {% block title %}Crear pagina{% endblock %}
 {% block content %}
 {% include 'pages/includes/page_menu.html' %}
-    <main role="main">
-        <div class="container">
-            <div class="row mt-3 mb-5">
-                <div class="col-md-9 mx-auto">
-                    <div>
-                        <form action="" method="post"> {% csrf_token %}
-                            {{form.as_p}}
-                            <div class="text-center">
-                                <input type="submit" value="Crear pagina"/>
-                            </div>
-                        </form>
-                    </div>
+<main role="main">
+    <div class="container">
+        <div class="row mt-3 mb-5">
+            <div class="col-md-9 mx-auto">
+                <div>
+                    <form action="" method="post"> {% csrf_token %}
+                        {{form.as_p}}
+                        <div class="text-center">
+                            <input type="submit" class="btn btn-primary btn-block mt-3" value="Crear página" />
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
-    </main>
+    </div>
+</main>
+
 {% endblock %}
