--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -10,8 +10,15 @@
                     <div class="col-md-9 mx-auto">
                         <h2 class="mb-4">{{page.title}}</h2>
                         <div>
-                        <p>{{page.content|striptags|safe|truncatechars:"200"}}</p>
-                            <p><a href="{% url 'pages:page' page.id page.title|slugify %}">Leer más</a></p>
+                            <p>{{page.content|striptags|safe|truncatechars:"200"}}</p>
+                            <p>
+                                <a href="{% url 'pages:page' page.id %}">Leer mas</a>
+
+                                {% if request.user.is_staff %}
+                                    | <a href="{% url 'pages:update' page.id %}">Editar</a> 
+                                    | <a href="{% url 'pages:delete' page.id %}">Eliminar</a>
+                                {% endif %}
+                            </p>
                         </div>
                     </div>
                 </div>
